[update] dockerfile 및 github action 수정 TEST